@@ -1,5 +1,12 @@
 2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>
 
+	* app/widgets/gimptagentry.[ch]
+	* app/widgets/gimptagpopup.c: since tags can be changed to make them
+	valid, they are now reloaded after assignment and cursor is positioned
+	at the previously edited tag.
+
+2008-08-06  Aurimas Juška  <aurisj@svn.gnome.org>
+
 	* app/widgets/gimptagentry.c
 	* app/widgets/gimptagpopup.c: use any UNICODE terminal punctuation
 	character as separator.
